force-app/main/default/objects/Training_Material__c/Training_Material__c.object-meta.xml
<CustomObject>
    <description>TOOLKIT _ An Object to process the training material specific to the client.</description>
    <label>Training Material</label>
    <nameField>
        <label>Training Material Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Training Materials</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>