force-app/main/default/objects/Training_Material__c/fields/Change_Impact__c.field-meta.xml
<CustomField>
    <fullName>Change_Impact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Change Impact</label>
    <referenceTo>Change_Impact__c</referenceTo>
    <relationshipName>Training_Materials_Object</relationshipName>
    <type>Lookup</type>
</CustomField>