force-app/main/default/objects/Training_Material__c/fields/Deliverable_Type__c.field-meta.xml
<CustomField>
    <fullName>Deliverable_Type__c</fullName>
    <label>Deliverable Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Content</fullName>
            </value>
            <value>
                <fullName>Strategy</fullName>
            </value>
            <value>
                <fullName>Logistics</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>