force-app/main/default/objects/Training_Material__c/fields/Delivery_Method_s__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Method_s__c</fullName>
    <label>Delivery Method(s)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Instructor Led/Virtual</fullName>
            </value>
            <value>
                <fullName>Web Based Training</fullName>
            </value>
            <value>
                <fullName>Demo Video</fullName>
            </value>
            <value>
                <fullName>Job Aid</fullName>
            </value>
            <value>
                <fullName>Participant Guide</fullName>
            </value>
            <value>
                <fullName>FAQs</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>