force-app/main/default/objects/Training_Material__c/fields/Development_Stage__c.field-meta.xml
<CustomField>
    <fullName>Development_Stage__c</fullName>
    <label>Development Stage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Analyze</fullName>
                <default>true</default>
                <label>Analyze</label>
            </value>
            <value>
                <fullName>Design Outline</fullName>
            </value>
            <value>
                <fullName>Build Materials</fullName>
            </value>
            <value>
                <fullName>Review Materials</fullName>
            </value>
            <value>
                <fullName>Recording WBT</fullName>
            </value>
            <value>
                <fullName>Deploy/Final</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>