force-app/main/default/objects/Training_Material__c/fields/Impacted_Audience__c.field-meta.xml
<CustomField>
    <fullName>Impacted_Audience__c</fullName>
    <label>Impacted Audience</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>