force-app/main/default/objects/Training_Material__c/fields/Learning_Objective__c.field-meta.xml
<CustomField>
    <fullName>Learning_Objective__c</fullName>
    <label>Learning Objectives</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>