force-app/main/default/objects/Training_Material__c/fields/Release__c.field-meta.xml
<CustomField>
    <fullName>Release__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Release</label>
    <referenceTo>Release__c</referenceTo>
    <relationshipName>Training_Materials_Object</relationshipName>
    <type>Lookup</type>
</CustomField>