force-app/main/default/objects/Training_Material__c/fields/Reviewers__c.field-meta.xml
<CustomField>
    <fullName>Reviewers__c</fullName>
    <label>Reviewers</label>
    <type>TextArea</type>
</CustomField>