force-app/main/default/objects/Training_Material__c/fields/Status_Notes__c.field-meta.xml
<CustomField>
    <fullName>Status_Notes__c</fullName>
    <label>Status Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>